[gd_scene load_steps=2 format=3 uid="uid://bvn8qxr7ywqkx"]

[ext_resource type="Script" path="res://tests/test_game_over_ui_runner.gd" id="1_test_runner"]

[node name="TestGameOverUIRunner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test_runner")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TestLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GameOver UI Test Runner"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="RunButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Run UI Tests"

[node name="ResultsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Click 'Run UI Tests' to start testing"
horizontal_alignment = 1
autowrap_mode = 3